--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema CT - Gestão Completa</title>
+    <title>Sistema CT Sol - Gestão Profissional</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -52,13 +52,13 @@
             <div id="dashboard-home" class="view-section">
                 <div class="welcome-card">
                     <h2 id="welcome-text"></h2>
-                    <p>Resumo operacional da unidade.</p>
+                    <p>Paz do Senhor. Bem-vindo à gestão da Comunidade Terapêutica Sol.</p>
                 </div>
                 <div class="stats-grid" id="stats-area"></div>
             </div>
 
             <div id="view-admin-equipe" class="view-section" style="display:none;">
-                <h2>Gestão de Equipe Profissional</h2>
+                <h2>Gestão de Equipe</h2>
                 <table class="tabela-dados">
                     <thead><tr><th>Nome</th><th>Cargo</th><th>E-mail</th><th>Ações</th></tr></thead>
                     <tbody id="lista-profissionais-tabela"></tbody>
@@ -80,43 +80,69 @@
                 <h2>Diário de Bordo</h2>
                 <div class="cards-grid" id="cards-diario-acolhidos"></div>
             </div>
-            <div id="view-atividades" class="view-section" style="display:none;">
-                <h2>Cronograma de Atividades</h2>
+            
+            <div id="view-plantao" class="view-section" style="display:none;">
+                <h2>Passagem de Plantão</h2>
                 <div class="welcome-card">
-                    <select id="atv-tipo"><option>Previnir</option><option>Psicossocial</option><option>Espiritualidade</option></select>
-                    <button class="btn-add" onclick="adicionarAtividade()">Lançar</button>
+                    <textarea id="plantao-texto" rows="4" placeholder="Descreva as ocorrências do turno..."></textarea>
+                    <button class="btn-add" onclick="salvarPlantao()">Gravar Plantão</button>
                 </div>
-                <ul id="lista-atividades" class="lista-check"></ul>
+                <div id="historico-plantoes"></div>
+            </div>
+
+            <div id="view-medicamentos" class="view-section" style="display:none;">
+                <h2>Supervisão de Medicação</h2>
+                <div id="lista-medicao-acolhidos"></div>
+            </div>
+
+            <div id="view-atividades" class="view-section" style="display:none;">
+                <h2>Atividades e Escalas Profissionais</h2>
+                <div style="margin-bottom: 20px; display: flex; gap: 10px;">
+                    <button class="btn-add" onclick="mostrarSubAtividade('lista')">Checklist Diário</button>
+                    <button class="btn-add" style="background:#3498db" onclick="mostrarSubAtividade('gerador')">Gerador de Escalas</button>
+                </div>
+
+                <div id="sub-atv-lista">
+                    <ul id="lista-atividades" class="lista-check"></ul>
+                </div>
+
+                <div id="sub-atv-gerador" style="display:none;">
+                    <div class="welcome-card" style="border-left-color: #3498db;">
+                        <h3>Configurar Escala Diária </h3>
+                        <select id="escala-tipo" onchange="ajustarCamposEscala()">
+                            <option value="refeicao">Escala de Refeições </option>
+                            <option value="limpeza">Escala de Limpeza</option>
+                        </select>
+                        <button class="btn-add" style="background:#27ae60" onclick="gerarTabelaEscala()">Gerar Prévia</button>
+                        <button class="btn-add" style="background:#e67e22" onclick="imprimirEscala()">Baixar / Imprimir PDF </button>
+                    </div>
+                    <div id="form-preenchimento-escala" class="welcome-card"></div>
+                    <div id="area-impressao-escala"></div>
+                </div>
             </div>
 
             <div id="view-psi-agendamentos" class="view-section" style="display:none;">
-                <h2>Agenda de Atendimentos</h2>
-                <div class="welcome-card">
-                    <select id="agendar-acolhido"></select>
-                    <input type="datetime-local" id="agendar-data">
-                    <button class="btn-add" onclick="salvarAgendamento()">Agendar</button>
-                </div>
-                <ul id="lista-agendamentos" class="lista-check"></ul>
+                <h2>Agenda Clínica</h2>
+                <div id="lista-agendamentos" class="lista-check"></div>
             </div>
             <div id="view-psi-prontuario" class="view-section" style="display:none;">
-                <h2>Evoluções Clínicas</h2>
+                <h2>Prontuários</h2>
                 <div class="cards-grid" id="lista-prontuarios"></div>
             </div>
 
             <div id="view-social-familia" class="view-section" style="display:none;">
-                <h2>Contatos Familiares</h2>
-                <div class="welcome-card"><select id="soc-familia-acolhido"></select><textarea id="soc-obs-familia"></textarea><button class="btn-add" onclick="salvarContatoSocial()">Gravar</button></div>
+                <h2>Vínculos Familiares</h2>
                 <div id="lista-contatos-familia"></div>
             </div>
             <div id="view-social-documentos" class="view-section" style="display:none;">
-                <h2>Checklist Documental</h2>
+                <h2>Documentação</h2>
                 <div class="cards-grid" id="lista-docs-acolhidos"></div>
             </div>
         </main>
     </div>
 
     <div id="modal-acolhido" class="modal"><div class="modal-content"><h3>Novo Acolhido</h3><input id="ac-nome" placeholder="Nome"><input id="ac-idade" type="number"><input id="ac-droga" placeholder="Droga"><button onclick="salvarAcolhido()">Salvar</button><button onclick="fecharModal('modal-acolhido')">Fechar</button></div></div>
-    <div id="modal-evolucao" class="modal"><div class="modal-content"><h3 id="evol-nome-acolhido"></h3><textarea id="evol-texto" rows="5"></textarea><button onclick="salvarEvolucaoClinica()">Gravar</button><button onclick="fecharModal('modal-evolucao')">Fechar</button></div></div>
+    <div id="modal-evolucao" class="modal"><div class="modal-content"><h3 id="evol-nome-acolhido"></h3><textarea id="evol-texto" rows="5" placeholder="Evolução técnica..."></textarea><button onclick="salvarEvolucaoClinica()">Gravar</button><button onclick="fecharModal('modal-evolucao')">Fechar</button></div></div>
 
     <script src="script.js"></script>
 </body>
